--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,14 @@
             <version>3.17</version>
         </dependency>
 
+        <!--模板引擎 freemarker-->
+        <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
+
     </dependencies>
 
 
