--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <packaging>war</packaging>
 
     <name>learn-base-java Maven Webapp</name>
-    <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
     <properties>
@@ -361,6 +360,13 @@
             <artifactId>spring-jms</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
+
+        <!--google 工具包-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
     </dependencies>
 
 
@@ -404,7 +410,6 @@
                         <source>1.8</source>
                         <target>1.8</target>
                         <compilerArguments>
-                            <!--TODO:打包依赖包路径-->
                             <extdirs>src/main/webapp/WEB-INF/lib</extdirs>
                         </compilerArguments>
                     </configuration>
